--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "typecheck": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "element-plus": "^2.2.0",
-    "vue": "^3.2.25"
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^17.0.34",
     "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.51.0",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.7.1",
     "unplugin-element-plus": "^0.4.0",
